made some changes today

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -8,6 +8,21 @@
 </head>
 <body>
     <div class="dashboard-container">
+        <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="students.html">Students</a></li>
+            </ul>
+        </nav>
+    
+        <!-- Dashboard Content -->
+        <div class="dashboard-container">
+            <h1>Welcome to the Dashboard</h1>
+            <p>Manage students, view analytics, and more.</p>
+            <!-- Add your dashboard content here -->
+        </div>  
         <!-- Search bar at the top -->
         <header class="dashboard-header">
             <div class="dashboard-search">
