--- a/registration.html
+++ b/registration.html
@@ -34,44 +34,40 @@
             </div>
             <button type="submit">Register</button>
         </form>
-        <script>
-            // Ensure form ID matches
-            document.getElementById('registrationForm').addEventListener('submit', function (event) {
-                event.preventDefault();
+        <script> 
+           document.getElementById('registrationform').addEventListener('submit', function(event) {
+            event.preventDefault();
 
-                // Get form values
-                const fullName = document.getElementById('fullname').value;
-                const dob = document.getElementById('dob').value;
-                const passportId = document.getElementById('pid').value;
-                const course = document.getElementById('course').value;
+            const fullName = document.getElementById('fullname').value;
+            const dob = document.getElementById('dob').value;
+            const passportId = document.getElementById('Pid').value;
+            const course = document.getElementById('course').value;
+            const password = document.getElementById('password').value;
 
-                // Send data to the backend
-                fetch('http://localhost:3000/register', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ 
-                        fullname: fullName, 
-                        dob: dob, 
-                        passportId: passportId, 
-                        course: course 
-                    })
-                })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        alert('Registration Successful!');
-                    } else {
-                        alert('Error: ' + data.error);
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('An error occurred. Please try again.');
-                });
+
+
+            fetch('https://localhost:3000/rgister', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+
+                },
+                body: JSON.stringfy({fullname: fullName, dob: dob,})
+            })
+            .then(response => response.json())
+            .then(data => {
+                if(data.success) {
+                    alert('Registration successful!');
+                } else {
+                    alert('Error: ' + data.error);
+                }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Failed to register, please try again later.');
             });
-        </script>
-    </div>
+        });
+    </script>
+</div>
 </body>
 </html>
