--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Student Registration System</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
+            <li><a href="students.html">Students</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contacts.html">Contacts</a></li>
-            <li><a href="students.html">Students</a></li>
+            
         </ul>
     </nav>
 
