--- a/frontend/Dashboard.html
+++ b/frontend/Dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dashboard</title>    
-    <link rel="stylesheet" type="text/css" href="dashboard.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/dashboard.css">
 </head>
 <body>
     <div class="dashboard-container">
@@ -15,7 +15,7 @@
                 <input type="text" placeholder="Search...">
             </div>
             <div class="profile-bar">
-                <img src="assets/profile.png" alt="Profile Picture">
+                <img src="assets/images/profile.png" alt="Profile Picture">
                 <div class="profile-info">
                     <h4><!-- User's Full Name goes here --></h4>
                 </div>
@@ -26,15 +26,15 @@
         <nav class="dashboard-menu">
             <h2>Dashboard</h2>
             <a href="/courses">
-                <img src="assets/courses.png" alt="Courses">
+                <img src="assets/images/courses.png" alt="Courses">
                 Grades
             </a>
             <a href="registration.html">
-                <img src="assets/registration.png" alt="Registration">
+                <img src="assets/images/registration.png" alt="Registration">
                 Registration
             </a>
             <a href="/logout">
-                <img src="assets/logout.png" alt="Logout">
+                <img src="assets/images/logout.png" alt="Logout">
                 Logout
             </a>
         </nav>
