--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Student Registration System</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar">
         <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="students.html">Students</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="contacts.html">Contacts</a></li>
-            
         </ul>
     </nav>
 
@@ -23,8 +22,8 @@
         <h1>Welcome to the Student Registration System</h1>
         <p>Simplify student registration and management with our easy-to-use platform.</p>
         <div class="cta-buttons">
-            <a href="login.html" class="btn">Login</a>
-            <a href="registration.html" class="btn">Register</a>
+            <a href="login.html" class="btn" aria-label="Login to your account">Login</a>
+            <a href="registration.html" class="btn" aria-label="Register as a new student">Register</a>
         </div>
     </header>
 
