--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="login-container">
@@ -12,7 +12,7 @@
         <!-- Form for login submission -->
         <form id="loginForm" action="/login" method="post">
             <div class="input-group">
-                <label for="username">Username</label>
+                <label for="username">username</label>
                 <input type="text" id="username" name="username" required>
             </div>
             <div class="input-group">
@@ -25,15 +25,15 @@
                 document.getElementById('loginForm').addEventListener('submit', function(event){
                     event.preventDefault();
 
-                    const passportId = document.getElementById('passportId').value;
-                    const password = document.getAnimations('password').value;
+                    const username = document.getElementById('username').value;
+                    const password = document.getElementById('password').value;
 
                     fetch('http://localhost:3000/login', { 
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ passportId: passportId, password: password }),
+                    body: JSON.stringify({ username: username, password: password }),
 
                     })
                     .then(response => response.json())
